--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -19,7 +19,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:background="@color/white"
+            android:background="@android:color/transparent"
             android:ems="10"
             android:fontFamily="@font/bold"
             android:gravity="center_vertical"
@@ -45,7 +45,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:background="@color/white"
+            android:background="@android:color/transparent"
             android:ems="10"
             android:fontFamily="@font/italic"
             android:gravity="center_vertical"
@@ -72,7 +72,7 @@
             android:layout_height="500dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:background="@color/white"
+            android:background="@android:color/transparent"
             android:ems="10"
             android:fontFamily="@font/regular"
             android:gravity="start"
