--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,7 +67,7 @@
                 android:id="@+id/generalButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_filter_shape"
+                android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/light_yellow"
                 android:fontFamily="@font/regular"
                 android:paddingStart="15dp"
@@ -88,7 +88,7 @@
                 android:id="@+id/studyButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_filter_shape"
+                android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/light_pink"
                 android:fontFamily="@font/regular"
                 android:paddingStart="15dp"
@@ -109,7 +109,7 @@
                 android:id="@+id/workButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_filter_shape"
+                android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/light_green"
                 android:fontFamily="@font/regular"
                 android:paddingStart="15dp"
@@ -130,7 +130,7 @@
                 android:id="@+id/personalButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_filter_shape"
+                android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/light_blue"
                 android:fontFamily="@font/regular"
                 android:paddingStart="15dp"
