--- a/app/src/main/res/layout/dialogue_delete.xml
+++ b/app/src/main/res/layout/dialogue_delete.xml
@@ -29,7 +29,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/yes_button"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="#000000"
         android:fontFamily="@font/bold"
         android:gravity="center"
         android:padding="10dp"
@@ -45,7 +46,8 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/no_button"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="@color/light_grey"
         android:fontFamily="@font/bold"
         android:gravity="center"
         android:padding="10dp"
