--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -173,6 +173,7 @@
             android:id="@+id/signupPasswordReq"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/regular"
             android:text="- 8 character minimum"
             android:textColor="#000000"
             android:textSize="12sp"
