--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ConstraintLayoutMainSignup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/background_grey"
     tools:context=".SplashScreen">
 
     <ImageView
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.092"
-        app:srcCompat="@drawable/notesicon" />
+        app:srcCompat="@raw/notesicon" />
 
     <TextView
         android:id="@+id/noteMeTextSignup"
@@ -86,7 +86,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.258"
-            app:srcCompat="@drawable/user" />
+            app:srcCompat="@raw/user" />
 
         <EditText
             android:id="@+id/signupUserTextView"
@@ -117,7 +117,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.436"
-            app:srcCompat="@drawable/email" />
+            app:srcCompat="@raw/email" />
 
         <EditText
             android:id="@+id/signupEmailTextView"
@@ -148,7 +148,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.606"
-            app:srcCompat="@drawable/lock" />
+            app:srcCompat="@raw/lock" />
 
         <EditText
             android:id="@+id/signupPasswordTextView"
