--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,16 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="primary_red">#FF5151</color>
+    <color name="light_grey">#D3D3D3</color>
+
+    <!--background color of app-->
     <color name="background_grey">#242424</color>
 
+    <!--color of 4 different note categories-->
     <color name="light_yellow">#FDFD96</color>
     <color name="light_green">#90EE90</color>
     <color name="light_pink">#FFB6C1</color>
     <color name="light_blue">#9FE0EB</color>
-    <color name="light_grey">#D3D3D3</color>
+
+
 </resources>
